@@ -25,6 +25,7 @@
 
   CHANGE HISTORY:
 
+     7 November 2018 -- upped to 3.2 r8 for identical legacy and extended flags check
     20 October 2018 -- upped to 3.2 r7 for rare bug in LASinterval::merge_intervals()
      5 October 2018 -- upped to 3.2 r6 for corrected 'is_empty' return value
     28 September 2018 -- upped to 3.2 r5 for fix in extended classification writing 
@@ -69,8 +70,8 @@ typedef long long SIGNED_INT64;
 
 #define LASZIP_VERSION_MAJOR                3
 #define LASZIP_VERSION_MINOR                2
-#define LASZIP_VERSION_REVISION             7
-#define LASZIP_VERSION_BUILD_DATE      181020
+#define LASZIP_VERSION_REVISION             8
+#define LASZIP_VERSION_BUILD_DATE      181107
 
 #define LASZIP_COMPRESSOR_NONE              0
 #define LASZIP_COMPRESSOR_POINTWISE         1
